[gd_scene load_steps=6 format=3 uid="uid://duno81q2u1xce"]

[ext_resource type="PackedScene" uid="uid://c1dr6dtbbrlp3" path="res://scenes/all_time_score.tscn" id="1_7px2u"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_oen4c"]

[sub_resource type="LabelSettings" id="LabelSettings_kwk0g"]
font_size = 53
shadow_size = 10
shadow_color = Color(0.572549, 0, 0, 0.607843)

[sub_resource type="Animation" id="Animation_hm4x2"]
resource_name = "ui_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameNameLabel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 256), Vector2(448, 248)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NewGameButton:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 352), Vector2(-456, 352)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AllTimeBest:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 480), Vector2(-224, 480)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AllTimeWorst:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(232, 480), Vector2(496, 480)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u788m"]
_data = {
"ui_animation": SubResource("Animation_hm4x2")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oen4c")

[node name="GameNameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 248.0
offset_right = 876.0
offset_bottom = 336.0
text = "UNSHUFFLE"
label_settings = SubResource("LabelSettings_kwk0g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = -456.0
offset_top = 352.0
offset_right = -28.0
offset_bottom = 424.0
text = "NEW GAME"

[node name="AllTimeBest" parent="." instance=ExtResource("1_7px2u")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -224.0
offset_top = 480.0
offset_right = -32.0
offset_bottom = 784.0
grow_horizontal = 1
grow_vertical = 1
Title = "BEST"

[node name="AllTimeWorst" parent="." instance=ExtResource("1_7px2u")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 496.0
offset_top = 480.0
offset_right = 697.0
offset_bottom = 784.0
grow_horizontal = 1
grow_vertical = 1
Title = "WORST"

[node name="UiAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u788m")
}
